Switchd to tabs from space